Avoid overflowing ads

--- a/source/style/base.scss
+++ b/source/style/base.scss
@@ -133,3 +133,7 @@
     }
   }
 }
+
+.aside-card-container > ul {
+  overflow: hidden;
+}
